--- a/components/PaneComponent/PaneComponent.module.css
+++ b/components/PaneComponent/PaneComponent.module.css
@@ -1,10 +1,11 @@
 .pane {
-  height: 100%;
-  width: 100%;
+  /* height: 100%; */
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 5px;
+  flex-grow: 1;
 }
 
 .commandsContainer {
