--- a/components/WindowComponent/WindowComponent.module.css
+++ b/components/WindowComponent/WindowComponent.module.css
@@ -5,7 +5,7 @@
   margin-top: 10px;
   padding: 5px;
   size-adjust: none;
-  display: flex;
+  display: grid;
   row-gap: 5px;
   column-gap: 5px;
 }
