--- a/components/ResultScript/ResultScript.module.css
+++ b/components/ResultScript/ResultScript.module.css
@@ -6,3 +6,13 @@
   row-gap: 5px;
   width: 100%;
 }
+
+.buttonContainer {
+  display: flex;
+  column-width: 100%;
+  column-gap: 5px;
+}
+
+.button {
+  width: 100%;
+}
