--- a/components/PaneComponent/PaneComponent.module.css
+++ b/components/PaneComponent/PaneComponent.module.css
@@ -1,41 +1,17 @@
 .pane {
-  /* height: 100%; */
-  /* width: 100%; */
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   padding: 5px;
-  flex-grow: 1;
   border: 2px solid #ccc;
-}
-
-.commandsContainer {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  row-gap: 5px;
-  column-width: 100%;
-}
-
-.command {
-  display: flex;
-  column-gap: 2px;
 }
 
 .commandInput {
   width: 100%;
+  height: 100%;
 }
 
-.buttonsContainer {
-  display: flex;
-  column-width: 100%;
-  column-gap: 5px;
+.commandInput > div {
+  height: 100%;
 }
 
-.button {
-  width: 100%;
-}
-
-.icon {
-  pointer-events: none;
+.commandInput  textarea {
+  height: 100% !important;
 }
