--- a/components/Main/Main.module.css
+++ b/components/Main/Main.module.css
@@ -11,4 +11,12 @@
 .creationContainer {
   display: flex;
   justify-content: space-between;
+  column-gap: 1rem;
+  row-gap: 1rem;
+}
+
+@media screen and (max-width: 1140px) {
+  .creationContainer {
+    flex-direction: column;
+  }
 }
