--- a/components/ResultScript/ResultScript.module.css
+++ b/components/ResultScript/ResultScript.module.css
@@ -1,11 +1,11 @@
 .root {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  justify-content: space-around;
   padding: 5px;
   row-gap: 5px;
   width: 100%;
-  max-width: 600px;
+  max-width: 500px;
 }
 
 .buttonContainer {
@@ -16,4 +16,11 @@
 
 .button {
   width: 100%;
+}
+
+@media screen and (max-width: 1140px) {
+  .root {
+    max-width: 100%;
+    flex-direction: column-reverse;
+  }
 }
