--- a/components/Main/Main.module.css
+++ b/components/Main/Main.module.css
@@ -9,6 +9,14 @@
   justify-content: space-between;
 }
 
+.leftInfo {
+  display: flex;
+}
+
+.rightInfo > button {
+  height: 100%;
+}
+
 .creationContainer {
   display: flex;
   justify-content: space-between;
@@ -26,5 +34,16 @@
     margin-bottom: 10px;
     row-gap: 0.8rem;
     max-width: 450px;
+  }
+
+  .leftInfo {
+    flex-direction: column;
+    row-gap: 10px;
+    margin: 0;
+  }
+
+  .rightInfo,
+  .rightInfo > button {
+    width: 100%;
   }
 }
